--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,20 +1,25 @@
 # Use official Python image
 FROM python:3.11-slim
 
-# Set work directory
+# Avoid buffering issues
+ENV PYTHONUNBUFFERED=1
+ENV PORT=8000
+
+# Create working directory
 WORKDIR /app
 
-# Copy requirements
-COPY app/requirements.txt .
+# Copy requirements first (for caching)
+COPY requirements.txt .
 
-# Install dependencies
+# Upgrade pip and install dependencies
+RUN pip install --upgrade pip
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy project files
-COPY app/ ./app
+# Copy the app
+COPY . .
 
-# Expose port
+# Expose port for Render
 EXPOSE 8000
 
-# Run FastAPI server
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
+# Run FastAPI with uvicorn
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--workers", "1"]
